--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^6.28.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
