--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.14.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
